fix role z-index

--- a/src/Components/Portfolio/Portfolio.css
+++ b/src/Components/Portfolio/Portfolio.css
@@ -34,6 +34,7 @@
     top: 35%;
     left: 50%;
     transform: translate(-50%) rotate(-45deg);
+    z-index: 1;
 }
 
  .portfolioItem-contributor {
